<resources>
    <string name="app_name">The Cheezery 00000205371</string>
    <string name="welcome">Welcome to The Cheezery!</string>
    <string name="description">Home of the most wonderful desserts ever seen (and tested) by the human being.</string>
    <string name="get_started">Get started!</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="conditions">I have read and accept terms and conditions of The Cheezery</string>
    <string name="sign_in">Sign In</string>
    <string name="our_menu">Our menu</string>
    <string name="cold_drinks">Cold drinks</string>
    <string name="hot_drinks">Hot drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="custom">Custom</string>

    <!-- fonts families -->
    <string name="light">sans-serif-light</string>
    <string name="condensed">sans-serif-condensed</string>
    <string name="thin">sans-serif-thin</string>
    <string name="medium">sans-serif-medium</string>
    <string name="regular">sans-serif</string>
</resources>