<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/imagen_1"/>

    <EditText
        android:id="@+id/etName"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_marginTop="@dimen/padding_top_login"
        android:id="@+id/etLastName"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_marginTop="@dimen/padding_top_login"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_marginTop="@dimen/padding_top_login"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/cbxConditions"
        android:text="@string/conditions"
        android:layout_marginTop="@dimen/padding_top_login"
        android:fontFamily="@string/light"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/padding_top_login"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:cornerRadius="25dp"/>
</LinearLayout>