<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purpleishGrey"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivPortada"
        android:layout_width="match_parent"
        android:layout_height="461dp"
        android:src="@drawable/the_cheezery"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="24sp"
        android:textColor="@color/dustyWhite" />
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/dustyWhite"
        android:textSize="15sp"
        android:textStyle="italic"
        android:padding="15dp"
        android:text="@string/description"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed-light"/>

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:cornerRadius="25dp"/>
</LinearLayout>